# erlang-derp

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  rebar.config
.github/workflows/: ci.yml  docker.yml  release.yml
c_src/: CMakeLists.txt  Makefile  build.sh  derp_sodium_nif.c  derp_tls_nif.c
c_src/CMake/: FindErlang.cmake  FindSodium.cmake
config/: sys.config  vm.args
doc/: features.md
docker/: Dockerfile  Dockerfile.client  Dockerfile.test  docker-compose.simulation.yml  docker-compose.yml  run_simulation.sh
docker/certs/: ca.crt  generate.sh  server.crt
docs/: changelog.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: client.md  docker.md  server.md
docs/reference/: api.md  otp_bug_report.md
guides/: client.md  installation.md  protocol.md  quickstart.md  server.md  tls.md
src/: derp.app.src  derp.hrl  derp_app.erl  derp_client.erl  derp_client_sup.erl  derp_conn.erl  derp_crypto.erl  derp_frame.erl  derp_http.erl  derp_http_handler.erl  derp_rate_limiter.erl  derp_registry.erl  derp_server.erl  derp_server_sup.erl  derp_sodium.erl  derp_sup.erl  derp_test_client.erl  derp_tls.erl  derp_tls_nif.erl  derp_ws_handler.erl
test/: ct.config  derp_SUITE.erl  derp_client_tests.erl  derp_crypto_tests.erl  derp_frame_tests.erl  derp_http_tests.erl  derp_integration_tests.erl  derp_mesh_tests.erl  derp_rate_limiter_tests.erl  derp_registry_tests.erl  derp_tls_tests.erl
test/certs/: generate.sh
test/interop/: go.mod  go.sum  go_client.go  python_client_test.py  run_tests.sh
